# urdf-viz

./: .clippy.toml  .cspell.json  .deny.toml  .gitignore  .travis.yml  0.index.js  Cargo.toml  Dockerfile  LICENSE  README.md  appveyor.yml  create_bin.sh  index.html  index.js  object.stl  pkg_index_js.index.js  sample.urdf
.github/: dependabot.yml
.github/.cspell/: dictionary.txt  project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml  release.yml
ci/: before_deploy.ps1  before_deploy.sh  install.sh
examples/wasm/: .gitignore  Cargo.toml  README.md  index.html  package.json  sample.urdf  webpack.config.js
examples/wasm/src/: lib.rs
src/: app.rs  arc_ball.rs  assimp_utils.rs  bevy_app.rs  errors.rs  handle.rs  lib.rs  mesh.rs  point_cloud.rs  urdf.rs  urdf_viewer.rs  utils.rs  viewer.rs  web_server.rs
tests/: test.rs
