[package]
name = "urdf-viz"
version = "0.35.0"
authors = ["Takashi Ogura <t.ogura@gmail.com>"]
edition = "2021"
description = "URDF visualization"
license = "Apache-2.0"
keywords = ["robotics", "urdf", "visualization"]
categories = ["visualization"]
repository = "https://github.com/openrr/urdf-viz"
exclude = [".github/*", "img/*"]

[workspace]
members = ["examples/wasm"]

[features]
default = ["assimp"]
assimp = ["assimp-crate", "assimp-sys"]

# Note: k, kiss3d, serde, structopt, urdf-rs, and wasm-bindgen are public dependencies.
[dependencies]
k = "0.27"
kiss3d = "0.33"
nom_stl = "0.2"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }
urdf-rs = "0.6"

assimp-crate = { package = "assimp", version = "0.3.1", optional = true }
assimp-sys = { version = "0.3.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = { version = "3", features = ["termination"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
warp = { version = "0.3", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.13"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.31"
serde_json = "1"
serde_qs = "0.9"
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Url",
    "FileReader",
    "Blob",
    "File",
    "Response",
    "WebGlRenderingContext",
] }
