[package]
name = "urdf-viz"
version = "0.43.1"
authors = ["Takashi Ogura <t.ogura@gmail.com>"]
edition = "2021"
description = "URDF visualization"
license = "Apache-2.0"
keywords = ["robotics", "urdf", "visualization"]
categories = ["visualization"]
repository = "https://github.com/openrr/urdf-viz"
exclude = [".github/*", "img/*"]

[workspace]
members = ["examples/wasm"]

[features]
default = ["assimp"]
assimp = ["assimp-crate", "assimp-sys", "tempfile"]

# Note: k, kiss3d, serde, structopt, tokio, urdf-rs, and wasm-bindgen are public dependencies.
[dependencies]
crossbeam-queue = "0.3.5"
k = "0.31"
kiss3d = "0.35"
mesh-loader = "0.0.2"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
thiserror = "1.0"
tracing = "0.1"
urdf-rs = "0.8"

assimp-crate = { package = "assimp", version = "0.3.1", optional = true }
assimp-sys = { version = "0.3.1", optional = true }
tempfile = { version = "3.8", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
axum = "0.6"
ctrlc = { version = "3", features = ["termination"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["trace"] }
tracing-subscriber = "0.3"
ureq = "2"

[target.'cfg(target_family = "wasm")'.dependencies]
base64 = "0.20"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.31"
serde_json = "1"
serde_qs = "0.12"
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Url",
    "FileReader",
    "Blob",
    "File",
    "Response",
    "WebGlRenderingContext",
] }

[dev-dependencies]
serde_qs = "0.12"
url = "2"
