[package]
name = "urdf-viz-wasm"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_family = "wasm")'.dependencies]
urdf-viz = { path = "../.." }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[lints]
workspace = true
